--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,25 +10,30 @@ body {
 }
 
 .container{
-  margin: 50px auto 0 auto;
-  width: 700px;
+  margin: 0 auto;
+  width: 100%;
   font-size: 18px;
-  font-weight: 200;
+  font-weight: 200px;
   line-height: 30px;
   background-color: lighgray;
   border-radius: 6px;
   padding: 60px;
+  form{
+    width: 100%;
+    margin: 0 auto;
+  }
   h1 {
     font-size: 70px;
-    margin: 5px 0 0 5px;
+    width: 100%;
+    margin: 5px 0 50px 5px;
     text-align: center;
     padding-bottom: 20px;
     border-bottom: 1px solid #4183C4;
   }
   input{
-    width: 600px;
-    font-size: 30px;
-    margin: 15px 0 0 0;
+    width: 80%;
+    margin: 0 10% 0 10%;
+    font-size: 1.5em;
   }
   li{
     border-bottom: 1px solid gray;
