--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,13 +17,13 @@ body {
   line-height: 30px;
   background-color: lighgray;
   border-radius: 6px;
-  padding: 60px;
+  padding: 60px 0 50px 0;
   form{
     width: 100%;
     margin: 0 auto;
   }
   h1 {
-    font-size: 70px;
+    font-size: 4rem;
     width: 100%;
     margin: 5px 0 50px 5px;
     text-align: center;
