Started implemented Parse

--- a/app/templates/todoComp.handlebars
+++ b/app/templates/todoComp.handlebars
@@ -1,1 +1,1 @@
-  <li id="{{_id}}" class="closed"> {{ name }} <span> X </span> </li>
+  <li id="{{objectId}}" class="closed"> {{ name }} <span> X </span> </li>
