--- a/app/templates/todoDelete.handlebars
+++ b/app/templates/todoDelete.handlebars
@@ -1,1 +1,1 @@
-  <li id="{{_id}}" class="hidden"> {{ name }} <span> X </span> </li>
+  <li id="{{objectId}}" class="hidden"> {{ name }} <span> X </span> </li>
